# serializer version: 1
# name: test_all_entities[number.neopool_chlorine_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_chlorine_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine setpoint',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Chlorine setpoint',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cl1',
    'unique_id': '1234567890_mbf_par_cl1',
    'unit_of_measurement': <UnitOfRatio.PARTS_PER_MILLION: 'ppm'>,
  })
# ---
# name: test_all_entities[number.neopool_chlorine_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Chlorine setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfRatio.PARTS_PER_MILLION: 'ppm'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_chlorine_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[number.neopool_cover_reduction_when_covered-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_cover_reduction_when_covered',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cover reduction (when covered)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cover reduction (when covered)',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_cover_reduction',
    'unique_id': '1234567890_mbf_par_hidro_cover_reduction',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[number.neopool_cover_reduction_when_covered-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Cover reduction (when covered)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_cover_reduction_when_covered',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_all_entities[number.neopool_hydrolisis_target_production_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_hydrolisis_target_production_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hydrolisis target production level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hydrolisis target production level',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro',
    'unique_id': '1234567890_mbf_par_hidro',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[number.neopool_hydrolisis_target_production_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Hydrolisis target production level',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_hydrolisis_target_production_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[number.neopool_hydrolysis_shutdown_temp_threshold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_hydrolysis_shutdown_temp_threshold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hydrolysis shutdown temp. threshold',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Hydrolysis shutdown temp. threshold',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_shutdown_temperature',
    'unique_id': '1234567890_mbf_par_hidro_shutdown_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.neopool_hydrolysis_shutdown_temp_threshold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Hydrolysis shutdown temp. threshold',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_hydrolysis_shutdown_temp_threshold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.0',
  })
# ---
# name: test_all_entities[number.neopool_ph_max_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 14.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_ph_max_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH max limit',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.PH: 'ph'>,
    'original_icon': None,
    'original_name': 'pH max limit',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph1',
    'unique_id': '1234567890_mbf_par_ph1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.neopool_ph_max_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'ph',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool pH max limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 14.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_ph_max_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[number.neopool_ph_min_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 14.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_ph_min_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH min limit',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.PH: 'ph'>,
    'original_icon': None,
    'original_name': 'pH min limit',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph2',
    'unique_id': '1234567890_mbf_par_ph2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.neopool_ph_min_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'ph',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool pH min limit',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 14.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_ph_min_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[number.neopool_redox_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 1000.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_redox_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Redox setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Redox setpoint',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rx1',
    'unique_id': '1234567890_mbf_par_rx1',
    'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
  })
# ---
# name: test_all_entities[number.neopool_redox_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Redox setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 1000.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_redox_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[number.neopool_smart_lower_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_smart_lower_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Smart lower temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Smart lower temperature',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'smart_temp_low',
    'unique_id': '1234567890_mbf_par_smart_temp_low',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.neopool_smart_lower_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Smart lower temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_smart_lower_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[number.neopool_smart_upper_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_smart_upper_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Smart upper temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Smart upper temperature',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'smart_temp_high',
    'unique_id': '1234567890_mbf_par_smart_temp_high',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.neopool_smart_upper_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Smart upper temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_smart_upper_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[number.neopool_temperature_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.neopool_temperature_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature setpoint',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating_temp',
    'unique_id': '1234567890_mbf_par_heating_temp',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.neopool_temperature_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Temperature setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.neopool_temperature_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
